[gd_scene load_steps=3 format=3 uid="uid://bq30f3qmujej1"]

[ext_resource type="Script" path="res://hud.gd" id="1_3ycor"]
[ext_resource type="FontFile" uid="uid://bnos414srl8hd" path="res://fonts/Xolonium-Regular.ttf" id="2_xnn6u"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_3ycor")

[node name="DeathScore" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -86.0
offset_top = 17.0
offset_right = 1.0
offset_bottom = 81.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.937255, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xnn6u")
theme_override_font_sizes/font_size = 40
text = "0"
vertical_alignment = 1

[node name="KillScore" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -470.0
offset_top = 21.0
offset_right = -386.0
offset_bottom = 81.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_xnn6u")
theme_override_font_sizes/font_size = 40
text = "0	"
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_xnn6u")
theme_override_font_sizes/font_size = 40
text = "Banana
Wars!!!"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HPLabel" type="Label" parent="."]
offset_left = 1.0
offset_top = 1.0
offset_right = 26.0
offset_bottom = 27.0
text = "HP"

[node name="HPBar" type="ProgressBar" parent="."]
offset_left = 26.0
offset_top = 1.0
offset_right = 474.0
offset_bottom = 28.0
value = 100.0

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
